# milvus_rag

./: .gitignore  .sourcery.yaml  .tags  =2.0.0  CLAUDE.md  DEPENDENCY_ANALYSIS.md  Dockerfile  README.md  auto_commit.sh  cleanup_pyproject.sh  config_export.json  create_code_updates.sh  create_conda.sh  create_fernet.py  dev-requirements.txt  docker-compose.yml  encypt_key2.py  environment.yml  health_check.sh  mkdocs.yml  pyproject.toml  pyproject.toml.broken.backup  pyproject_fix.py  requirements-resolved.txt  requirements.txt  run_in_env.sh  security-audit.json  setup_docker_env.sh  setup_github_actions.sh  structure.sh  test.md
.cursor/: codemap.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  performance-baseline.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-format.yml  ci.yml  claude-assistant.yml  dependabot-auto-merge.yml  deploy_docs.yml  performance.yml  release.yml  security.yml
.roo/rules/: .cursor_rules_010-security-deployment.md.mdc  .cursor_rules_directory.md  .cursor_rules_dotenv.md.mdc  .cursor_rules_pydantic.md.mdc  000-hybrid-rag-project.md  001-langgraph-orchestration.md  002-parallel-retrieval.md  003-fusion-logic.md  004-self-correction.md  005-milvus-retrieval.md  006-neo4j-relationships.md  007-entity-extraction.md  008-fallback-mechanism.md  009-observability.md  010-security-deployment.md  Dockerfile.md  _repository.md  auto_commit.sh.md  create_code_updates.sh.md  create_conda.sh.md  create_fernet.py.md  dotenv.md  encypt_key2.py.md  fastapi.md  github-actions.md  graphrag_config_directory.md  graphrag_directory.md  graphrag_embedding_service_directory.md  graphrag_milvus_directory.md  graphrag_neo4j_directory.md  graphrag_nlp_directory.md  graphrag_rag_system_directory.md  health_check.sh.md  langchain.md  llamaindex.md  milvus.md  mkdocs.md  neo4j.md  openai.md  pydantic.md  (+13 more)
.taskmaster/: config.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt
awesome-cursor-rules-mdc-main/: .env.example  rules.json
awesome-cursor-rules-mdc-main/cursor-rules-cli/: rules.json  setup.py
awesome-cursor-rules-mdc-main/rules-mdc/: ai-fusion-agent.mdc  beautifulsoup.mdc  embedding-service.mdc  execution-agent.mdc  fallback-mechanism.mdc  nlp-processor.mdc  opentelemetry.mdc  planner-agent.mdc  prometheus.mdc  report-generator.mdc  secure-config.mdc  task-management.mdc  task-manager.mdc  web-interface.mdc
awesome-cursor-rules-mdc-main/src/: config.yaml  generate_mdc_files.py  mdc_generation_progress.json
ctags/Tmain/parser-specific-fields-for-foreign-lang.d/: input.unknownx  knownz.ctags  unknownx.ctags
ctags/Units/parser-asm.r/68hc11.asm.d/: input.asm
ctags/Units/parser-asm.r/asm-cpp-macro-expansion-with-multi-line-args.d/: input.S
ctags/Units/parser-javascript.r/simple-jsx.d/: expected.tags
ctags/parsers/: matlab.c
docs/: api.md
graphrag/: logger.py  requirements.txt
graphrag/config/: secure_config.py  settings.py
graphrag/embedding_service/: async_pipeline.py  service.py
graphrag/fusion/: fuser.py
graphrag/milvus/: manager.py  retriever.py
graphrag/neo4j/: graph_retriever.py
graphrag/nlp/: entity_extractor.py
graphrag/rag_system/: main.py  orchestrator.py  service.py
mdc_output/: dependency_graph.gexf  directory_structure.txt  repo_analysis_report.md  repo_graph.json
mdc_output/dependency_graph_subgraphs/: index.html  main_graph.json  subgraphs.json
scripts/: PRD.txt  check_performance_regression.py
src/graphrag/: requirements.txt
src/graphrag/config/: settings.py  validator.py
src/graphrag/embedding_service/: service.py
src/graphrag/graph_enrichment/: context_engine.py  memory_system.py
src/graphrag/neo4j/: manager.py
src/graphrag/nlp/: processor.py
src/graphrag/rag_system/: enhanced_main.py  main.py
src/graphrag/validation/: __init__.py  confidence_scoring.py  self_correction.py
src/utils/: __init__.py  model_cache.py
tests/: test_confidence_scoring.py  test_config_settings.py  test_context_enhancement.py  test_enhanced_neo4j_manager.py  test_hybrid_rag_system.py  test_memory_system.py  test_milvus_hnsw.py  test_model_cache.py  test_nlp_processor.py  test_rag_system.py  test_self_correction.py
