[project]
name = "milvus_rag"
version = "0.1.0"
description = "Milvus-powered RAG pipeline with FastAPI and Neo4j"
authors = [
    {name = "Jatinder Grewal", email = "iamgrewal@gmail.com"}
]
dependencies = [
    "langchain",
    "openai",
    "sentence-transformers",
    "pymilvus",
    "neo4j",
    "neo4j-graphrag[openai]",
    "python-dotenv",
    "tqdm",
    "requests",
    "numpy",
    "protobuf>=3.20.3,<5.0.0",  # Compatible with tensorflow
    "grpcio-tools",
    "pansi>=2020.7.3",  # Required by py2neo
    "packaging>=23.2,<24.0"  # Compatible with langfuse
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["graphrag", "milvus_docs"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8"
] 